[gd_scene load_steps=3 format=3 uid="uid://cnydgc3m51djg"]

[ext_resource type="Script" uid="uid://cnfmjxdxwwubq" path="res://Scripts/MenuLogin.gd" id="1_mhdbr"]
[ext_resource type="Theme" uid="uid://bqh2iuipvdjx" path="res://Themes/TemaNovo.tres" id="2_6mis4"]

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_mhdbr")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.417574, 0.512227, 0.580751, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 340.0
offset_bottom = 236.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -294.0
offset_top = 1.0
offset_right = 263.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6mis4")
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 76
text = "StockMaster
"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Usu√°rio"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Nome"
alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Senha"

[node name="LineEdit2" type="LineEdit" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
placeholder_text = "Senha"
alignment = 1
secret = true

[node name="Label4" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(175, 39)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = "Login"

[node name="HTTPRequest" type="HTTPRequest" parent="CanvasLayer"]

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button" to="CanvasLayer" method="_on_button_pressed"]
[connection signal="request_completed" from="CanvasLayer/HTTPRequest" to="CanvasLayer" method="_on_http_request_request_completed"]
